# epics-ca

./: Cargo.toml  README.md  bindgen.sh
examples/: array_metadata.rs  array_value.rs  connect.rs  scalar_metadata.rs  scalar_value.rs
generator/: Cargo.toml
generator/src/: main.rs
ioc/TestApp/Db/: Test.db
src/: cadef.rs  caerr.rs  channel.rs  context.rs  error.rs  lib.rs  tests.rs  thread.rs  traits.rs  types.rs  utils.rs
src/channel/: any.rs  array.rs  base.rs  get.rs  mod.rs  put.rs  scalar.rs  subscribe.rs  tests.rs  typed.rs  value.rs
src/request/: base.rs  mod.rs  typed.rs
src/sys/: cadef.rs  caerr.rs  db_access.rs  mod.rs  types.rs
src/types/: alarm.rs  db.rs  enums.rs  epics.rs  field.rs  id.rs  mod.rs  request.rs  string.rs  traits.rs  value.rs  wrappers.rs
src/types/request/: any.rs  base.rs  extended.rs  meta.rs  mod.rs  tests.rs  typed.rs
sys/: Cargo.toml  build.rs
sys/generator/: Cargo.toml
sys/generator/src/: main.rs
sys/src/: generated.rs  lib.rs  test.c  test.rs
