[workspace]
members = ["sys", "generator"]

[workspace.package]
documentation = "https://docs.rs/epics-ca"
homepage = "https://github.com/agerasev/epics-ca"
repository = "https://github.com/agerasev/epics-ca.git"
readme = "README.md"
license = "MIT/Apache-2.0"

[package]
name = "epics-ca"
version = "0.1.0"
edition = "2021"
description = "Client library for EPICS Channel Access protocol"
keywords = ["epics", "async"]
categories = ["science", "network-programming", "api-bindings", "asynchronous"]

[dependencies.sys]
package = "epics-ca-sys"
path = "sys"
version = "0.1"
