[workspace]
members = ["sys", "generator"]

[workspace.package]
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
homepage = "https://gitlab.com/agerasev/epics-ca"
repository = "https://gitlab.com/agerasev/epics-ca.git"
readme = "README.md"
license = "MIT/Apache-2.0"

[package]
name = "epics-ca"
version = "0.1.2"
edition = "2021"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

description = "Client library for EPICS Channel Access protocol"
documentation = "https://docs.rs/epics-ca"
keywords = ["epics", "async"]
categories = ["science", "network-programming", "api-bindings", "asynchronous"]
exclude = ["/ioc"]
resolver = "2"

[dependencies]
futures = { version = "0.3.25", default-features = false, features = ["std"] }
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
pin-project = "1.0.12"
derive_more = "0.99.17"
bitflags = "1.3.2"
derivative = "2.2.0"

[dependencies.sys]
package = "epics-ca-sys"
path = "sys"
version = "0.1"

[dev-dependencies]
futures = "0.3.25"
async-std = { version = "1.12.0", features = ["attributes"] }
serial_test = "0.9.0"
cstr = "0.2.11"
