[package]
name = "epics-ca-sys"
version = "0.1.1"
edition = "2021"
links = "ca"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

description = "Raw bindings for EPICS Channel Access library"
documentation = "https://docs.rs/epics-ca-sys"
keywords = ["epics"]
categories = ["science", "api-bindings"]

[features]
test = ["cc"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", optional = true }
